// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppEditTabs should match a snapshot for the ac integration tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <h2
        class="e1byern-el-subtitle"
      >
        AgencyCloud Integration
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
         
        <a>
          see here.
        </a>
      </p>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
      >
        The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <h2
      class="e1byern-el-subtitle"
    >
      AgencyCloud Integration
    </h2>
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      When your application is integrated with AgencyCloud you can either launch it from the dedicated Apps menu in the AgencyCloud software, or from a series of menus embedded within other pages. Your app can receive contextual entity ids as global variables so it can launch with relevant data for your users. For more on our desktop API
       
      <a>
        see here.
      </a>
    </p>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
    >
      The below list maps to the various menus from which you can launch your app or replace an AgencyCloud Screen. You should select the ones that are relevant to your app only.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the app listing tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <h2
        class="e1byern-el-subtitle"
      >
        App Listing
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to sumbit your app for approval, it all needs to be completed.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
      >
        For information on listing your app 
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="supportEmail"
              placeholder="The contact to your support team if your users have a problem"
              type="email"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Support email
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="telephone"
              placeholder="Should one of our developers need to contact you about your app"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Telephone
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="homePage"
              placeholder="Your company homepage. HTTP:// or HTTPS://"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Home page
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="launchUri"
              placeholder="The launch page for your app. HTTPS only other than for http://localhost"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Launch URI
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="termsAndConditionsUrl"
              placeholder="URL to link to your Terms and Conditions"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Terms and Conditions
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="privacyPolicyUrl"
              placeholder="URL to link to your Privacy Policy"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Privacy Policy
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="pricingUrl"
              placeholder="URL to link to your Pricing Info"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Pricing Info
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="isFree"
              type="checkbox"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              This application is free
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        />
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Summary
            </label>
            <textarea
              class="e16rclfx-el-text-area"
              placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
            />
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Description
          </label>
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Icon Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
              >
                Dimensions: 96px x 96px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Featured Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
              >
                Dimensions: 495px x 222px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
              >
                Dimensions: 598px x 457px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
              >
                Dimensions: 598px x 457px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
              >
                Dimensions: 598px x 457px
              </p>
            </div>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1ndspjz-el-file-input-wrap"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Upload Other Listing Image
            </label>
            <div
              class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
            >
              <button
                class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
                type="button"
              >
                Upload
              </button>
              <input
                class="eqyxiu0-el-file-input"
                type="file"
              />
              <input
                class="e17gdmv2-el-file-input-hidden"
                id="test-static-id"
                value=""
              />
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
              >
                Dimensions: 598px x 457px
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <h2
      class="e1byern-el-subtitle"
    >
      App Listing
    </h2>
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to sumbit your app for approval, it all needs to be completed.
    </p>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
    >
      For information on listing your app 
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="supportEmail"
            placeholder="The contact to your support team if your users have a problem"
            type="email"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Support email
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="telephone"
            placeholder="Should one of our developers need to contact you about your app"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Telephone
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="homePage"
            placeholder="Your company homepage. HTTP:// or HTTPS://"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Home page
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="launchUri"
            placeholder="The launch page for your app. HTTPS only other than for http://localhost"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Launch URI
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="termsAndConditionsUrl"
            placeholder="URL to link to your Terms and Conditions"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Terms and Conditions
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="privacyPolicyUrl"
            placeholder="URL to link to your Privacy Policy"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Privacy Policy
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="pricingUrl"
            placeholder="URL to link to your Pricing Info"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Pricing Info
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="isFree"
            type="checkbox"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            This application is free
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      />
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Summary
          </label>
          <textarea
            class="e16rclfx-el-text-area"
            placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
          />
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <label
          class="e1nbkkrq-el-label"
        >
          Description
        </label>
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Icon Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
            >
              Dimensions: 96px x 96px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Featured Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
            >
              Dimensions: 495px x 222px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
            >
              Dimensions: 598px x 457px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
            >
              Dimensions: 598px x 457px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
            >
              Dimensions: 598px x 457px
            </p>
          </div>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1ndspjz-el-file-input-wrap"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Upload Other Listing Image
          </label>
          <div
            class="ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
          >
            <button
              class="elmeic8-el-mr4 e1ymtwpu-el-intent-low e1f2ikqj-el-button"
              type="button"
            >
              Upload
            </button>
            <input
              class="eqyxiu0-el-file-input"
              type="file"
            />
            <input
              class="e17gdmv2-el-file-input-hidden"
              id="test-static-id"
              value=""
            />
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-small-text"
            >
              Dimensions: 598px x 457px
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the authentication tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <h2
        class="e1byern-el-subtitle"
      >
        Authentication
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
      >
        When using the Reapit Connect
         
        <a>
          Authorization Code flow,
        </a>
         you need to register both a re-direct uri and a logout uri. The former is the location in your app, you want Reapit Connect to re-direct to after a successful user login, the latter, after a succesful logout. Only uris that are registered here will be accepted as a location by Reapit Connect although, you can register multiple locations with a comma separated list.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="redirectUris"
              placeholder="Enter your Redirect URI(s)"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Redirect URI(s)
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="signoutUris"
              placeholder="Enter your Sign Out URI(s)"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Sign Out URI(s)
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <h2
      class="e1byern-el-subtitle"
    >
      Authentication
    </h2>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
    >
      When using the Reapit Connect
       
      <a>
        Authorization Code flow,
      </a>
       you need to register both a re-direct uri and a logout uri. The former is the location in your app, you want Reapit Connect to re-direct to after a successful user login, the latter, after a succesful logout. Only uris that are registered here will be accepted as a location by Reapit Connect although, you can register multiple locations with a comma separated list.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="redirectUris"
            placeholder="Enter your Redirect URI(s)"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Redirect URI(s)
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="signoutUris"
            placeholder="Enter your Sign Out URI(s)"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Sign Out URI(s)
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the general tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <h2
        class="e1byern-el-subtitle"
      >
        General Info
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        You already have supplied enough details to get started with our APIs and if you just want to develop your app, you should visit the 
        <a
          href="/apps/SOME_APP_ID"
        >
          App Detail page
        </a>
         to obtain your Client Id.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        This page is the starting point for completing your app listing, and initiating the approvals process for your app to go live with customer data. For information on listing your app
         
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </p>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
      >
        As you make changes, you should save your changes in the left hand side menu. You can do this as many times as you like until your app is listed, or live in the AppMarket. From this point on, you will need to create revisions to your app for our team to review. You can only have one live revision outstanding at any given time.
      </p>
      <h2
        class="e1byern-el-subtitle"
      >
        App Name
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        Your app name can be anything as long as it is unique in our database. By default we auto generate one from your company name and some randomised words. You should change it to something memorable to you and your customers.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Name
            </label>
          </div>
        </div>
      </div>
      <h2
        class="e1byern-el-subtitle"
      >
        App Listings
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        The toggles below will depend on how far you are progressing with the development of your app.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        You should toggle ‘Completing App Listing’ when you are ready to start completing the app listing information. This will enable you to start completing it without the fields being required and you can save at any point.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched as replacement screen from within AgencyCloud
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        You should toggle ‘AppMarket Listed’ when you are ready to submit your app for review. This will make all relevant fields required before saving and will notify our team that it is ready to review. When you app has been reviewed and accepted, you can de-list your app by toggling again and saving the app.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        You should toggle ‘Private App’ if you only want your app to be private to a select group of customers. You should enter their client codes from the installations table as a comma separated list.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Completing App Listing
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-completing-listing"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-completing-listing"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              AgencyCloud Integration
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-is-ac-inegrated"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-is-ac-inegrated"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              AppMarket Listed
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-is-listed"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-is-listed"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              Private App
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-is-private-app"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-is-private-app"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="limitToClientIds"
              placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Private App Client Ids
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <h2
      class="e1byern-el-subtitle"
    >
      General Info
    </h2>
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      You already have supplied enough details to get started with our APIs and if you just want to develop your app, you should visit the 
      <a
        href="/apps/SOME_APP_ID"
      >
        App Detail page
      </a>
       to obtain your Client Id.
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      This page is the starting point for completing your app listing, and initiating the approvals process for your app to go live with customer data. For information on listing your app
       
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </p>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
    >
      As you make changes, you should save your changes in the left hand side menu. You can do this as many times as you like until your app is listed, or live in the AppMarket. From this point on, you will need to create revisions to your app for our team to review. You can only have one live revision outstanding at any given time.
    </p>
    <h2
      class="e1byern-el-subtitle"
    >
      App Name
    </h2>
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      Your app name can be anything as long as it is unique in our database. By default we auto generate one from your company name and some randomised words. You should change it to something memorable to you and your customers.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="name"
            placeholder="The name of your app as it will appear to users"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Name
          </label>
        </div>
      </div>
    </div>
    <h2
      class="e1byern-el-subtitle"
    >
      App Listings
    </h2>
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      The toggles below will depend on how far you are progressing with the development of your app.
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      You should toggle ‘Completing App Listing’ when you are ready to start completing the app listing information. This will enable you to start completing it without the fields being required and you can save at any point.
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      You should toggle ‘AgencyCloud Integration’ only if you are intending your app to be launched as replacement screen from within AgencyCloud
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      You should toggle ‘AppMarket Listed’ when you are ready to submit your app for review. This will make all relevant fields required before saving and will notify our team that it is ready to review. When you app has been reviewed and accepted, you can de-list your app by toggling again and saving the app.
    </p>
    <p
      class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
    >
      You should toggle ‘Private App’ if you only want your app to be private to a select group of customers. You should enter their client codes from the installations table as a comma separated list.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Completing App Listing
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="app-edit-completing-listing"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="app-edit-completing-listing"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Yes
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            AgencyCloud Integration
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="app-edit-is-ac-inegrated"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="app-edit-is-ac-inegrated"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Yes
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            AppMarket Listed
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="app-edit-is-listed"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="app-edit-is-listed"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Yes
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Private App
          </label>
          <input
            class="e1ih6lkl-el-toggle-checkbox"
            id="app-edit-is-private-app"
            type="checkbox"
          />
          <label
            class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
            for="app-edit-is-private-app"
          >
            <span
              class="e18omfqv-el-toggle-item"
            >
              Yes
            </span>
            <span
              class="e18omfqv-el-toggle-item"
            >
              No
            </span>
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="limitToClientIds"
            placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Private App Client Ids
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the permissions tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <h2
        class="e1byern-el-subtitle"
      >
        Permissions
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
      >
        Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Foundations REST API. As such, it is worth looking at the
         
        <a
          href="/swagger"
          rel="noopener noreferrer"
          target="_blank"
        >
          API explorer here
           
        </a>
        before procceeding, to investigate which permissions you think you will need.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      />
      <h2
        class="e1byern-el-subtitle"
      >
        Reapit Products
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
      >
        This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <h2
      class="e1byern-el-subtitle"
    >
      Permissions
    </h2>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
    >
      Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Foundations REST API. As such, it is worth looking at the
       
      <a
        href="/swagger"
        rel="noopener noreferrer"
        target="_blank"
      >
        API explorer here
         
      </a>
      before procceeding, to investigate which permissions you think you will need.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    />
    <h2
      class="e1byern-el-subtitle"
    >
      Reapit Products
    </h2>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
    >
      This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditTabs should match a snapshot for the pipleines tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1de2pym-el-flex-justify-center ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
      >
        <div>
          <p
            class="e15ggth7-el-body-text"
          >
            Loading
          </p>
          <div
            class="ebhrnzh-el-loader-container"
          >
            <div
              class="eq1m1jz-el-loader"
            >
              <div
                class="exikdu1-el-loader-moving-bar"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1de2pym-el-flex-justify-center ef457sc-el-flex-align-center e2kmzjs-el-flex-container"
    >
      <div>
        <p
          class="e15ggth7-el-body-text"
        >
          Loading
        </p>
        <div
          class="ebhrnzh-el-loader-container"
        >
          <div
            class="eq1m1jz-el-loader"
          >
            <div
              class="exikdu1-el-loader-moving-bar"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
